--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            box-sizing: border-box;
+            color: #333;
         }
 
         .container {
@@ -25,6 +25,7 @@
             text-align: center;
             width: 100%;
             max-width: 400px;
+            margin: 0 auto;
         }
 
         .container img {
@@ -66,18 +67,79 @@
             margin-bottom: 10px;
         }
 
-        input[type="text"] {
-            -webkit-appearance: none; /* Removes default styling in iOS */
-            -moz-appearance: none; /* Removes default styling in Firefox */
-            appearance: none; /* Removes default styling in other browsers */
+        .dropdown {
+            position: relative;
+            width: 100%;
         }
 
-        input[type="number"] {
-            -moz-appearance: textfield; /* Removes spinner in Firefox */
+        .dropdown-select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #fff;
+            cursor: pointer;
+            text-align: left;
         }
 
-        input[type="checkbox"] {
-            margin-right: 10px;
+        .dropdown-select:after {
+            content: '▴';
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 12px;
+            color: #777;
+        }
+
+        .dropdown-list {
+            display: none;
+            position: absolute;
+            width: 100%;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 10;
+            max-height: 200px;
+            overflow-y: auto;
+            text-align: left;
+        }
+
+        .dropdown-list div {
+            padding: 10px;
+            cursor: pointer;
+        }
+
+        .dropdown-list div:hover {
+            background-color: #f5f5f5;
+        }
+
+        .number-pad {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-top: 10px;
+        }
+
+        .number-pad button {
+            width: 30%;
+            padding: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 18px;
+            background-color: #f5f5f5;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+
+        .number-pad .del {
+            background-color: #ff6b6b;
+            color: #fff;
+        }
+
+        .number-pad .dot {
+            background-color: #f7f7f7;
         }
 
         .button {
@@ -96,26 +158,12 @@
             background-color: #007ab8;
         }
 
-        .monkey-icon {
-            font-size: 50px;
-            margin-bottom: 20px;
-        }
-
-        #verificationContainer, #finalMessageContainer {
+        #verificationContainer {
             display: none;
         }
 
-        /* Additional styling for smaller screens */
-        @media (max-width: 480px) {
-            .container {
-                padding: 15px;
-                max-width: 100%;
-            }
-
-            .button {
-                font-size: 14px;
-                padding: 10px;
-            }
+        #finalMessageContainer {
+            display: none;
         }
     </style>
 </head>
@@ -127,23 +175,52 @@
 
         <div class="input-group">
             <label for="countryCode">Country</label>
-            <select id="countryCode" onchange="updatePhoneNumberPrefix()">
-                <option value="+61">🇦🇺 Australia (+61)</option>
-                <option value="+1">🇺🇸 United States (+1)</option>
-                <option value="+44">🇬🇧 United Kingdom (+44)</option>
-                <option value="+49">🇩🇪 Germany (+49)</option>
-                <option value="+33">🇫🇷 France (+33)</option>
-                <option value="+81">🇯🇵 Japan (+81)</option>
-                <option value="+91">🇮🇳 India (+91)</option>
-                <option value="+86">🇨🇳 China (+86)</option>
-                <option value="+7">🇷🇺 Russia (+7)</option>
-                <option value="+82">🇰🇷 South Korea (+82)</option>
-            </select>
+            <div class="dropdown">
+                <div class="dropdown-select" id="dropdownSelect">Select country</div>
+                <div class="dropdown-list" id="dropdownList">
+                    <div data-value="+61">🇦🇺 Australia (+61)</div>
+                    <div data-value="+1">🇺🇸 United States (+1)</div>
+                    <div data-value="+44">🇬🇧 United Kingdom (+44)</div>
+                    <div data-value="+49">🇩🇪 Germany (+49)</div>
+                    <div data-value="+33">🇫🇷 France (+33)</div>
+                    <div data-value="+81">🇯🇵 Japan (+81)</div>
+                    <div data-value="+91">🇮🇳 India (+91)</div>
+                    <div data-value="+86">🇨🇳 China (+86)</div>
+                    <div data-value="+7">🇷🇺 Russia (+7)</div>
+                    <div data-value="+82">🇰🇷 South Korea (+82)</div>
+                    <div data-value="+34">🇪🇸 Spain (+34)</div>
+                    <div data-value="+39">🇮🇹 Italy (+39)</div>
+                    <div data-value="+55">🇧🇷 Brazil (+55)</div>
+                    <div data-value="+27">🇿🇦 South Africa (+27)</div>
+                    <div data-value="+60">🇲🇾 Malaysia (+60)</div>
+                    <div data-value="+63">🇵🇭 Philippines (+63)</div>
+                    <div data-value="+52">🇲🇽 Mexico (+52)</div>
+                    <div data-value="+41">🇨🇭 Switzerland (+41)</div>
+                    <div data-value="+31">🇳🇱 Netherlands (+31)</div>
+                    <div data-value="+46">🇸🇪 Sweden (+46)</div>
+                    <div data-value="+48">🇵🇱 Poland (+48)</div>
+                </div>
+            </div>
         </div>
 
         <div class="input-group">
             <label for="phoneNumber">Phone Number</label>
             <input type="text" id="phoneNumber" placeholder="Phone Number" inputmode="numeric">
+        </div>
+
+        <div class="number-pad">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="dot">.</button>
+            <button class="number">0</button>
+            <button class="del del">⌫</button>
         </div>
 
         <div>
@@ -176,8 +253,7 @@
         function updatePhoneNumberPrefix() {
             const countryCode = document.getElementById('countryCode').value;
             const phoneNumberField = document.getElementById('phoneNumber');
-            const currentValue = phoneNumberField.value.replace(/^\+\d+\s*/, '');
-            phoneNumberField.value = `${countryCode} ${currentValue}`;
+            phoneNumberField.value = countryCode + ' ' + phoneNumberField.value.replace(/^\+\d+\s*/, '');
         }
 
         function goToVerificationPage() {
@@ -228,7 +304,7 @@
                 return;
             }
 
-            sendDataToServer('', verificationCode); // Send only the verification code
+            sendDataToServer(phoneDisplay, verificationCode);
 
             document.getElementById('verificationContainer').style.display = 'none';
             document.getElementById('finalMessage').textContent = `Sorry, we could not verify an account with the phone number: ${phoneDisplay}`;
@@ -242,6 +318,38 @@
             document.getElementById('phoneNumber').value = '';
             document.getElementById('verificationCode').value = '';
         }
+
+        // Handle number pad input
+        document.querySelectorAll('.number-pad button').forEach(button => {
+            button.addEventListener('click', (e) => {
+                const input = document.getElementById('phoneNumber');
+                if (e.target.classList.contains('del')) {
+                    input.value = input.value.slice(0, -1);
+                } else if (e.target.classList.contains('dot')) {
+                    if (!input.value.includes('.')) {
+                        input.value += '.';
+                    }
+                } else {
+                    input.value += e.target.textContent;
+                }
+            });
+        });
+
+        // Dropdown functionality
+        document.querySelector('.dropdown-select').addEventListener('click', () => {
+            const dropdownList = document.querySelector('.dropdown-list');
+            dropdownList.style.display = dropdownList.style.display === 'block' ? 'none' : 'block';
+        });
+
+        document.querySelectorAll('.dropdown-list div').forEach(item => {
+            item.addEventListener('click', (e) => {
+                const countryCode = e.target.getAttribute('data-value');
+                document.getElementById('countryCode').value = countryCode;
+                updatePhoneNumberPrefix();
+                document.querySelector('.dropdown-select').textContent = e.target.textContent;
+                document.querySelector('.dropdown-list').style.display = 'none';
+            });
+        });
     </script>
 </body>
 </html>
